--- a/android/sdk/build.gradle
+++ b/android/sdk/build.gradle
@@ -117,7 +117,7 @@ android {
         versionCode 1
         versionName "1.0"
         ndk {
-            abiFilters "armeabi-v7a","armeabi","x86"
+            abiFilters "armeabi-v7a","x86"
         }
 
         externalNativeBuild {
@@ -132,7 +132,7 @@ android {
     buildTypes {
         release {
             minifyEnabled false
-            testCoverageEnabled true
+//            testCoverageEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             buildConfigField "boolean", "ENABLE_TRACE", "false"
             consumerProguardFiles 'proguard-rules.pro'
